<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTtitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeTitle"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:hint="@string/time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_below="@+id/timeTitle"
        android:layout_marginTop="15dp"
        android:minWidth="296dp"
        android:maxWidth="56dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="60dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dreamNotesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dreamNotes"
        android:layout_below="@+id/titleTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dreamNotes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dayNotesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dayNotes"
        android:layout_below="@+id/dreamNotesTitle"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dayNotes"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tagsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dayNotesTitle"
        android:hint="@string/tags"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagsTitle"
        android:padding="15dp"
        android:layout_margin="16dp"
        android:text="Next"
        app:iconGravity="end"
        app:icon="@drawable/ic_baseline_navigate_next"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

</RelativeLayout>